--- a/test/monokai_dark/color_scheme_test.html
+++ b/test/monokai_dark/color_scheme_test.html
@@ -1,20 +1,22 @@
-COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML"
+<!-- COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML" -->
+<!DOCTYPE html>
+<!-- ^ fg=#f92672 fs= -->
+<!--      ^ fg=#f8f8f2 fs= -->
+<!--         ^ fg=#f8f8f2 fs= -->
 
       <!-- -->
 <!-- ^ fg=#f8f8f2 bg=#272822 fs= -->
 
-<!DOCTYPE html>
-<!-- ^^^^ fg=#f92672 fs= -->
-<!--      ^^^^^ fg=#f8f8f2 fs= -->
-
      <!-- comment -->
-<!-- ^^^^^^^^^^^^^^^^ fg=#75715e fs= -->
+<!-- ^^^^ fg=#75715e fs= -->
+<!--      ^ fg=#75715e fs= -->
+<!--              ^^^ fg=#75715e fs= -->
 
      <!--
 //   ^^^^ fg=#75715e fs=
 
           comment
-//        ^^^^^^^ fg=#75715e fs=
+//        ^ fg=#75715e fs=
 
      -->
 <!-- ^^^ fg=#75715e fs= -->
@@ -24,10 +26,10 @@ COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML"
 
         <meta charset="utf-8">
 <!--    ^ fg=#f8f8f2 fs= -->
-<!--     ^^^^ fg=#f92672 fs= -->
-<!--          ^^^^^^^ fg=#a6e22e fs= -->
+<!--     ^ fg=#f92672 fs= -->
+<!--          ^ fg=#a6e22e fs= -->
 <!--                 ^ fg=#f8f8f2 fs= -->
-<!--                   ^^^^^^ fg=#e6db74 fs= -->
+<!--                   ^ fg=#e6db74 fs= -->
 <!--                         ^ fg=#f8f8f2 fs= -->
 
         <title>Title</title>
@@ -38,10 +40,10 @@ COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML"
 <!--     ^ fg=#f92672 fs= -->
 <!--          ^ fg=#a6e22e fs= -->
 <!--                    ^ fg=#f8f8f2 fs= -->
-<!--                     ^^ fg=#e6db74 fs= -->
+<!--                     ^ fg=#e6db74 fs= -->
 <!--                                       ^ fg=#a6e22e fs= -->
 <!--                                              ^ fg=#f8f8f2 fs= -->
-<!--                                               ^^ fg=#e6db74 fs= -->
+<!--                                               ^ fg=#e6db74 fs= -->
 
         <meta name="description" content="A page description">
 
@@ -60,23 +62,23 @@ COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML"
 
         <script type="application/javascript">
 //      ^ fg=#f8f8f2 fs=
-//       ^^^^^^ fg=#f92672 fs=
+//       ^ fg=#f92672 fs=
 //              ^^^^ fg=#a6e22e fs=
 //                  ^ fg=#f8f8f2 fs=
-//                   ^^^^^^^^^^^^^^^^^^^^^^^^ fg=#e6db74 fs=
+//                   ^ fg=#e6db74 fs=
 //                                           ^ fg=#f8f8f2 fs=
 
           function $init() {return true;}
-//        ^^^^^^^^ fg=#66d9ef fs=italic
-//                 ^^^^^ fg=#a6e22e fs=
+//        ^ fg=#66d9ef fs=italic
+//                 ^^ fg=#a6e22e fs=
 //                      ^^ fg=#f8f8f2 fs=
 //                         ^ fg=#f8f8f2 fs=
-//                          ^^^^^^ fg=#f92672 fs=
+//                          ^ fg=#f92672 fs=
 //                                 ^^^^ fg=#ae81ff fs=
 //                                     ^^ fg=#f8f8f2 fs=
         </script>
 <!--    ^^ fg=#f8f8f2 fs= -->
-<!--      ^^^^^^ fg=#f92672 fs= -->
+<!--      ^ fg=#f92672 fs= -->
 <!--            ^ fg=#f8f8f2 fs= -->
 
     </head>
@@ -89,11 +91,11 @@ COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML"
 <!--     ^ fg=#a6e22e fs= -->
 <!--             ^ fg=#a6e22e fs= -->
 <!--                  ^ fg=#f8f8f2 fs= -->
-<!--                   ^^^^^^^ fg=#e6db74 fs= -->
+<!--                   ^ fg=#e6db74 fs= -->
 <!--                           ^^ fg=#a6e22e fs= -->
 <!--                             ^ fg=#f8f8f2 fs= -->
-<!--                              ^^^^^^^ fg=#e6db74 fs= -->
-<!--                                     ^^^^^^^^ fg=#f8f8f2 fs= -->
+<!--                              ^ fg=#e6db74 fs= -->
+<!--                                     ^ fg=#f8f8f2 fs= -->
 <!--                                             ^ fg=#f92672 fs= -->
 <!--                                              ^ fg=#f8f8f2 fs= -->
 
