--- a/test/monokai_dark/color_scheme_test.html
+++ b/test/monokai_dark/color_scheme_test.html
@@ -1,4 +1,4 @@
-<!-- COLOR TEST "Packages/five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML" -->
+<!-- COLOR SCHEME TEST "five_easy_color_schemes/Monokai (Dark).tmTheme" "HTML" -->
 <!DOCTYPE html>
 <!-- ^ fg=#f92672 fs= -->
 <!--      ^ fg=#f8f8f2 fs= -->
